# OpenCAEPlus

./: .buildinfo  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTE.md  README.md  cli  cli.bat  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/: changelog-ci-config.yaml  pull_request_template.md  release-drafter.yml
_sources/: index.rst.txt
_static/: documentation_options.js
api/: define_OpenCAEPlus_8hpp_1a1a53b724b6de666faa8a9e0d06d1055f.html  define_OpenCAEPlus_8hpp_1a901edadf17488bb6be1ac9a1e3cfea7a.html  define_OpenCAEPlus_8hpp_1ae0cb52afb79b185b1bf82c7e235f682b.html  dir_src.html  dir_src_lib.html  dir_src_lib_include.html  dir_src_lib_include_public.html  dir_src_lib_include_public_OpenCAEPlus.html  file_src_HelloWorld.h.html  file_src_Main.cpp.html  file_src_lib_OpenCAEPlus.cpp.html  file_src_lib_include_public_OpenCAEPlus_OpenCAEPlus.hpp.html  function_HelloWorld_8h_1ae16d29305d03dd6abced14ecd0293bd8.html  function_Main_8cpp_1ae66f6b31b5ad750f1fe042a706a4e3d4.html  function_OpenCAEPlus_8cpp_1a6302aaae12249e8ea16bfdc7de892f21.html  function_OpenCAEPlus_8hpp_1a6302aaae12249e8ea16bfdc7de892f21.html  library_root.html  namespace_std.html  program_listing_file_src_HelloWorld.h.html  program_listing_file_src_Main.cpp.html  program_listing_file_src_lib_OpenCAEPlus.cpp.html  program_listing_file_src_lib_include_public_OpenCAEPlus_OpenCAEPlus.hpp.html  unabridged_orphan.html
cmake/: version_from_git.cmake
docs/: .gitignore  Makefile  conf.py  conf.py~  index.rst~
src/: CMakeLists.txt  Main.cpp
(+75 files in other folders)
